[package]
name = "oogway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "oogway"
crate-type = ["cdylib"]

[dependencies]
async-std = "1.12.0"
oogway = { git = "https://github.com/cs50victor/oogway_ai", version = "0.1.0" }
pyo3 = "0.20.0"
pyo3-asyncio = { version = "0.20.0", features = ["async-std-runtime", "tokio", "attributes", "tokio-runtime"] }
